# coding-challenges

./: .gitignore  .replit  README.md  pyproject.toml  replitmenu.py
addToK/: addToK.py  instructions.md
autocompleteSystem/: autocomplete.py  instructions.md  tests.py
elementPairs/: instructions.md  pairs.py  pairsTest.py
jobScheduler/: scheduler.py
largestNonAdjacentSum/: instructions.md  nonadjsum.py  tests.py
lowestMissingPositive/: instructions.md  lowestMissingPositive.py
productWithoutIndex/: instructions.md  productOfAllButTheIndex.py
sortedMergedList/: instructions.md  sortedMergedList.py
staircaseSteps/: instructions.md  staircaseSteps.py
substringWithConcat/: instructions.md  substrconcat.py  substrconcatTest.py
treeSerializer/: instructions.md  serializer.py  treeTests.py
univalSubtrees/: tests.py  univals.py
waysToDecode/: decodings.py  instructions.md
wordFunnel/: instructions.md  wordFunnel.py
