[tool.poetry]
name = "codingchallenges"
version = "0.1.0"
description = ""
authors = ["Jason Tolbert <jasonalantolbert@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
anytree = "^2.8.0"
regex = "^2020.11.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
