[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Jason Tolbert <jasonalantolbert@gmail.com>"]
description = ""
name = "codingchallenges"
version = "0.1.0"
[tool.poetry.dependencies]
Unipath = "^1.1"
anytree = "^2.8.0"
python = "^3.8"
regex = "^2020.11.13"
[tool.poetry.dev-dependencies]
